Fix footer settings link not showing after refreshing or under Minerva or in dev server after refreshing

--- a/gadgets/ilhpp/styles/base.less
+++ b/gadgets/ilhpp/styles/base.less
@@ -86,6 +86,11 @@
   }
 }
 
+// Fix not displaying on Minerva skin (and MF)
+.skin-minerva ul#footer-places.footer-places li#ilhpp-footer-places-settings {
+  display: inline-block;
+}
+
 @font-size-small: 0.875em;
 @font-size-medium: 1em;
 @font-size-large: 1.125em;
